Fixed mobile alignment

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -985,16 +985,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(33 43 54 / var(--tw-bg-opacity));
 }
 
-.bg-amber-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
-}
-
-.bg-amber-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
 }
@@ -1125,8 +1115,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1rem;
 }
 
-.pt-32{
-  padding-top: 8rem;
+.pt-24{
+  padding-top: 6rem;
 }
 
 .pb-10{
@@ -1306,11 +1296,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-\[\#dddddd\]{
   --tw-text-opacity: 1;
   color: rgb(221 221 221 / var(--tw-text-opacity));
-}
-
-.text-primary-800{
-  --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1697,6 +1682,10 @@ body {
 
   .md\:pt-16{
     padding-top: 4rem;
+  }
+
+  .md\:pt-32{
+    padding-top: 8rem;
   }
 
   .md\:pt-\[120px\]{
